# routes/eventos.js
@@ -1,0 +1,7 @@
+const express = require('express')
+const router = express.Router()
+const EventosControllers = require('../controllers/eventos.js')
+
+router.get('/', EventosControllers.getEventos)
+
+module.exports = router;
