# routes/routes.js
@@ -7,5 +7,6 @@ router.use('/sala', require('./sala.js'))
 router.use('/proyecto', require('./proyecto.js'))
 router.use('/login', require('./login.js'))
 router.use('/admin',require('./admin.js'))
+router.use('/eventos',require('./eventos.js'))
 
 module.exports = router;
