# swagger.json
@@ -511,6 +511,19 @@
           }
         }
       }
+    },
+    "/eventos/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
